fix spacing

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/detached/annual-report-2023.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/detached/annual-report-2023.scss
@@ -1143,7 +1143,7 @@ html {
 				}
 			}
 			&-col2 {
-				grid-column: span 6;
+				grid-column: span 12;
 				@media (min-width: 800px) {
 					grid-column: 10 / -1;
 				}
